# textkit2

./: .gitignore  CHANGELOG.md  EDR_PERFORMANCE_PLAN.md  EDR_TOOLS_SURVEY.md  README.md  REFACTORING_EDR_PLAN_2026_07.md  REFACTORING_PLAN.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  security.yml
docs/: Makefile  conf.py  index.md
docs/dev/: adversarial-review-2026-07-15.md  api.md  architecture.md  changelog.md  clipboard-history-decision-2026-07-17.md  code-signing.md  code-style.md  contributing.md  feature-gap-analysis-2026-07-17.md  feature-pipelines-2026-07-16.md  improvement-plan-2026-07-15.md  index.md  pystray-exit-strategy-2026-07-15.md  refactoring-review-2026-07-21.md
docs/user/: config.md  daemon.md  dictionary.md  edr-environments.md  hotkeys.md  index.md  install.md  quickstart.md  transforms.md
press/: __init__.py  __main__.py  _cli_chain.py  _cli_config.py  _cli_daemon.py  _cli_dict.py  _cli_helpers.py  _dpapi.py  _paths.py  _pipe.py  clipboard.py  commands.py  config.py  daemon.py  dictionary.py  genpass.py  keystrokes.py
press/daemon/: __init__.py  _backends.py  _dispatch.py  _hotkeys.py  _lifecycle.py  _logs.py  _pipe.py  _sequence.py  _service.py  _tray.py
press/transforms/: __init__.py  case.py  dictionary.py  encode.py  encoding_repair.py  escape.py  hashing.py  hold.py  json_fmt.py  kana.py  lineending.py  lines.py  replace.py  separator.py  slug.py  sql.py  stats.py  table.py  timestamp.py  undo.py  unicode_norm.py  whitespace.py  width.py
test/: conftest.py
test/perf/: test_dictionary.py  test_startup.py  test_transforms.py
test/unit/: test_case.py  test_chain.py  test_cli.py  test_clipboard_guard.py  test_clipboard_utils.py  test_clipboard_win32.py  test_config.py  test_daemon.py  test_daemon_helpers.py  test_dictionary_mgmt.py  test_dictionary_transforms.py  test_encode.py  test_encoding_repair.py  test_escape.py  test_genpass.py  test_hashing.py  test_hold.py  test_json_fmt.py  test_kana.py  test_keystrokes.py  test_lineending.py  test_lines.py  test_pipe.py  test_replace.py  test_separator.py  test_sequence.py  test_slug.py  test_sql.py  test_stats.py  test_table.py  test_timestamp.py  test_transforms_init.py  test_undo.py  test_unicode_norm.py  test_uuid_cmd.py  test_whitespace.py  test_width.py
