[project]
name = "press"
version = "0.2.0"
description = "Clipboard text transformation tool for Windows 11"
readme = "README.md"
license = { text = "MIT" }
keywords = ["clipboard", "text", "transform", "windows", "hotkey"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "jaconv>=0.5.0",
    "argcomplete>=3.6",
    "charset-normalizer>=3.4.7",
]

[project.optional-dependencies]
daemon = [
    "pystray==0.19.5",
    "pynput>=1.8.1",
    "pywin32>=311; sys_platform == 'win32'",
    "Pillow>=12.2.0",
    "psutil>=7.0",
]

[project.scripts]
press = "press.__main__:main"
px    = "press.__main__:main"

[project.urls]
Homepage      = "https://github.com/tay2501/textkit2"
Documentation = "https://tay2501.github.io/textkit2"
Changelog     = "https://github.com/tay2501/textkit2/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/tay2501/textkit2/issues"

[dependency-groups]
build = [
    "pyinstaller>=6.19",
]
docs = [
    "sphinx>=9.1",
    "furo>=2025.12.19",
    "myst-parser>=5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2025.8.25",
]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
    "pytest-benchmark>=5.0",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.0",
    "freezegun>=1.5",
    "pip-audit>=2.8",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["press"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "I",
    "UP",
    "B",
    "PTH",
    "SIM",
    "RET",
    "TC",
    "RUF",
    "LOG",
    "G",
    "PERF",
    "FURB",
    "ARG",
    "PIE",
    "C4",
]
ignore = ["TRY003", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "RUF001", "ARG"]  # pytest fixtures and mock helpers often have unused args
"press/transforms/*.py" = ["RUF002"]  # EN DASH in Unicode range notation (e.g. U+0000–U+007F)
"press/transforms/__init__.py" = ["RUF067"]  # PEP 562 __getattr__ lazy-loading registry is intentional

[tool.mypy]
python_version     = "3.13"
strict             = true
warn_unreachable   = true
enable_error_code  = ["truthy-bool", "redundant-expr", "possibly-undefined"]
strict_equality    = true

[[tool.mypy.overrides]]
module = ["pystray.*", "pynput.*", "win32.*", "pywintypes", "jaconv.*", "PIL.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Platform-specific branches are unreachable on non-target platforms by design
module = "press.daemon"
warn_unreachable = false

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["test"]
addopts   = "-v"
markers   = [
    "windows_only: requires Windows (clipboard, hotkey, tray)",
    "slow: slower integration/system tests",
]

[tool.coverage.run]
branch = true
source = ["press"]
omit   = ["press/__main__.py", "press/clipboard.py", "press/daemon.py", "test/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
