[project]
name = "press"
version = "0.5.0"
description = "Clipboard text transformation tool for Windows 11"
readme = "README.md"
# PEP 639: SPDX license expression + license-files (requires hatchling >= 1.27)
license = "MIT"
license-files = ["LICENSE"]
keywords = ["clipboard", "text", "transform", "windows", "hotkey"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
# <3.16: pystray 0.19.5 (unmaintained upstream) is only verified up to 3.15;
# each new minor is admitted after the CI matrix proves it (see ci.yml).
requires-python = ">=3.13,<3.16"
dependencies = [
    "jaconv>=0.5.0",
    "argcomplete>=3.6",
    "charset-normalizer>=3.4.7",
]

[project.optional-dependencies]
daemon = [
    "pystray==0.19.5",
    "pynput>=1.8.2",
    "pywin32>=312; sys_platform == 'win32'",
    "Pillow>=12.2.0",
    "psutil>=7.2.2",
]

[project.scripts]
press = "press.__main__:main"
px    = "press.__main__:main"

[project.urls]
Homepage      = "https://github.com/tay2501/textkit2"
Documentation = "https://tay2501.github.io/textkit2"
Changelog     = "https://github.com/tay2501/textkit2/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/tay2501/textkit2/issues"

[dependency-groups]
build = [
    "pyinstaller>=6.21.0",
]
docs = [
    "sphinx>=9.1",
    "furo>=2025.12.19",
    "myst-parser>=5.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2025.8.25",
]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.155.7",
    "pip-audit>=2.10.1",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
]

[build-system]
requires      = ["hatchling>=1.27"]  # 1.27+ implements PEP 639 license expressions
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["press"]

[tool.ruff]
line-length = 100
# target-version is inferred from requires-python; keeping only one source of truth

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    "I",
    "UP",
    "B",
    "PTH",
    "SIM",
    "RET",
    "TC",
    "RUF",
    "LOG",
    "G",
    "PERF",
    "FURB",
    "ARG",
    "PIE",
    "C4",
]
ignore = ["TRY003", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["S101", "RUF001", "ARG"]  # pytest fixtures and mock helpers often have unused args
"press/transforms/*.py" = ["RUF002"]  # EN DASH in Unicode range notation (e.g. U+0000–U+007F)
"press/transforms/__init__.py" = ["RUF067"]  # PEP 562 __getattr__; __all__ = sorted(_LAZY) covers all exports

[tool.mypy]
python_version     = "3.13"
strict             = true
warn_unreachable   = true
enable_error_code  = ["truthy-bool", "redundant-expr", "possibly-undefined", "explicit-override"]
strict_equality    = true

[[tool.mypy.overrides]]
module = ["pystray.*", "pynput.*", "win32.*", "pywintypes", "jaconv.*", "PIL.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Platform-specific branches are unreachable on non-target platforms by design.
# press._pipe / press.clipboard / press._dpapi carry the same Win32-gated code
# for the CLI side; mypy runs on the Ubuntu CI lane, where everything after an
# `if sys.platform != "win32": return/raise` guard is pruned.
module = ["press.daemon.*", "press._pipe", "press.clipboard", "press._dpapi"]
warn_unreachable = false

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["test"]
addopts   = "-v"
markers   = [
    "windows_only: requires Windows (clipboard, hotkey, tray)",
    "slow: slower integration/system tests",
]

[tool.coverage.run]
branch = true
source = ["press"]
# In the denominator: _cli_*.py, clipboard.py, daemon/_lifecycle.py and
# daemon/_pipe.py (handle_request) — their platform-independent logic and
# mocked failure paths are unit-tested. Still omitted: __main__.py (argparse
# wiring, exercised via subprocess tests) and the daemon modules whose event
# loops (tray icon, pynput hooks) cannot run headless in CI.
omit = [
    "press/__main__.py",
    "press/daemon/_backends.py",
    "press/daemon/_dispatch.py",
    "press/daemon/_hotkeys.py",
    "press/daemon/_logs.py",
    "press/daemon/_service.py",
    "press/daemon/_tray.py",
    "test/*",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    # Win32-only blocks cannot be measured on the Linux CI lane (and the
    # non-Windows halves cannot be measured on Windows), so platform gates
    # are excluded on both lanes for a comparable, honest percentage. Their
    # internals are still unit-tested with fakes (test_clipboard_win32.py).
    'if sys\.platform == "win32":',
]
